# clance

./: CLAUDE.md  README.md
.github/workflows/: release.yml
docs/: 실사용피드백.md
docs/plans/: 2026-03-13-clance-design.md  2026-03-13-clance-implementation.md
scripts/: bump-version.sh
src/: about.html  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
