[package]
name = "clance"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"

[target.'cfg(windows)'.dependencies]
nvml-wrapper = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }
