[package]
name = "clance"
version = "0.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
nvml-wrapper = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }
